main.css
@import url(vars.css);

/** opt into view transition */
@view-transition {
  navigation: auto;
}

/** define custom animations with at rule keyframes */
@keyframes fadeIn {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}
::view-transition-old(root) {
  animation: none;
}
::view-transition-new(root) {
  animation: fadeIn 1s ease-in forwards;
}

/** uploading custom font */
@font-face {
  font-family: "KoPub Batang";
  src: url("assets/fonts/kopubbatang-regular.woff2") format("woff2"),
    url("assets/fonts/kopubbatang-regular.woff") format("woff");
}

/** universal styling */
body {
  margin: 0;
  width: 100%;
  padding: var(--spacing-size) 0 var(--footer-height) 0;
  display: grid;
  row-gap: var(--spacing-size);
  color: var(--font-color);
  background-color: var(--background);
  font-family: "KoPub Batang", serif;
}
header {
  display: flex;
  flex-direction: column;
  row-gap: var(--spacing-size);
  margin: 0 var(--gutter-size);
}
main {
  margin: var(--spacing-size) var(--gutter-size);
}
h1 {
  margin: 0;
  font-size: var(--font-size-h1);
}
footer {
  height: var(--footer-height);
  padding: 0 var(--gutter-size) 0 var(--gutter-size);
  position: fixed;
  inset: auto 0 0 0;
  background-color: var(--accent-1);
  color: var(--background);
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
}
nav {
  font-size: var(--font-size-big);
  display: flex;
  flex-direction: row;
  align-items: center;
  margin-left: var(--gutter-size);
  padding: 0 var(--gutter-size);
  column-gap: var(--spacing-size);
  position: relative;
  width: fit-content;
  height: 2.5rem;
  border-radius: var(--corner-rounding);
  border-bottom-left-radius: 0;
  background-color: var(--background);
  a {
    align-content: center;
    height: 100%;
    transition: color 0.3s ease;
    color: var(--font-color);
  }
  a:hover {
    background-color: var(--accent-2);
  }
}
a:link,
a:visited {
  color: var(--font-color);
}

nav > img {
  height: fit-content;
  width: fit-content;
  position: absolute;
  left: 0;
  transform: translateX(-50%);
}

a[data-current] {
  background-color: var(--accent-2);
}
main img {
  min-width: var(--home-img-min-width);
  max-width: var(--home-img-max-width);
}
.imgfirst-section {
  display: flex;
  justify-content: center;
  align-items: center;
}
.imgfirst-section picture,
.textfirst-section {
  img,
  source {
    height: auto;
    width: 100%;
  }
}

/** media queries for smaller screen sizes */
@media screen and (max-width: 767px) {
  header,
  main,
  footer {
    box-sizing: border-box;
  }
  h2 {
    font-size: var(--font-size-big);
  }
  .imgfirst-section {
    display: flex;
    flex-direction: column;
    row-gap: var(--spacing-size);
  }
  #additional-img {
    display: none;
  }
  #projects-main {
    display: flex;
    flex-direction: column;
    align-items: center;
    row-gap: var(--spacing-size);
  }
  project-card {
    width: 80%;
  }
}
@media screen and (min-width: 768px) {
  .imgfirst-section {
    display: flex;
    flex-direction: row;
    column-gap: var(--spacing-size);
    h1 {
      width: 100%;
    }
  }
  .textfirst-section {
    display: grid;
    grid-template-columns: 2fr 1fr;
    place-items: center;
    gap: var(--spacing-size);
  }
  #projects-main {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    column-gap: var(--spacing-size);
    row-gap: var(--spacing-size);
    justify-content: center;
    align-items: center;
  }
  project-card {
    width: var(--project-card-width);
  }
}

/** homepage specific styling*/
.imgfirst-section hgroup {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 80%;
  p {
    display: flex;
    max-width: var(--max-subheading-width);
    align-self: flex-start;
  }
}
#landing-main {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  row-gap: var(--spacing-size);
  a {
    width: 33%;
    min-height: var(--blob-min-height);
    min-width: var(--blob-min-width);
  }
}
/** styling the site map blobs */
.landing-blob {
  text {
    font-size: var(--font-size-h1);
  }
}
.gradient-top {
  stop-color: var(--end-peach);
}
.gradient-bottom {
  stop-color: var(--end-blue);
}
svg text {
  fill: var(--font-color);
}

/** styling title-picture overlays */
.image-text-header {
  position: relative;
  text-align: center;
  h1 {
    position: absolute;
    bottom: 0;
    left: 50%;
    transform: translate(-50%, 50%);
    text-shadow: var(--text-shadow);
  }
  img,
  source {
    width: 80%;
    height: auto;
  }
}

/** projects page-specific styling */
/** custom component styling */
project-card {
  background-color: gray;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  aspect-ratio: var(--card-ratio);
  min-width: var(--home-img-min-width);
  a {
    height: var(--project-label-height);
    align-content: center;
    box-sizing: border-box;
    padding: 0 var(--spacing-size);
    background-color: var(--background);
  }
  .projectdisplay {
    position: relative;
    text-align: right;
    padding: var(--spacing-size);
    height: 100%;
    overflow: hidden;
  }
}

.projectdisplay video,
.projectdisplay picture,
.projectdisplay picture img {
  position: absolute;
  width: 100%;
  height: 100%;
  inset: 0;
  object-fit: cover;
  object-position: center;
  z-index: 0;
}

subject-tag {
  position: relative;
  border-radius: var(--tag-rounding);
  padding: var(--tag-padding);
  z-index: 1;
}

.fullstack {
  position: relative;
  background-color: var(--accent-2);
}
.ai {
  background-color: var(--end-blue);
}

/** fallbacks if browser doesn't support color - trying out 2 of my fave colors in hsl */
.frontend {
  background-color: hsl(16, 100%, 66%);
}
.ui {
  background-color: hsl(300, 26%, 71%);
}
/** experimenting with higher gamut colors */
@supports (color: color(display-p3 1 1 1)) {
  .frontend {
    background-color: color(display-p3 1 0.4 0.1);
  }
  .ui {
    background-color: color(display-p3 0.784 0.635 0.784);
  }
}

/* form styling */
form {
  margin: 2rem;
  display: flex;
  flex-direction: column;
  row-gap: 1rem;
  background: linear-gradient(
    180deg,
    var(--end-blue) 0%,
    var(--end-peach) 100%
  );
  padding: 1rem;
  border: 1px solid black;
  border-radius: var(--form-rounding);
}

form-field {
  display: grid;
}

input[type="textarea"] {
  min-height: 3rem;
}

input[type="submit"],
button {
  margin: auto;
  height: 2rem;
  width: 40%;
  background-color: var(--accent-2);
  font-family: "KoPub Batang", serif;
  font-size: 16px;
  border-radius: var(--form-rounding);
  color: var(--font-color);
  border: 1px solid var(--font-color);
}
.toggle {
  display: hidden;
}

.invalid {
  border: 1px solid red;
  color: red;
}

input:valid {
  border: 1px solid black;
  color: black;
}
output {
  display: flex;
  flex-direction: column;
  height: 10%;
}
#errors p {
  opacity: 0;
  text-align: center;
  align-content: center;
  transition: opacity 0.5s ease-out;
  background-color: red;
  color: white;
  padding: 2px;
  border-radius: var(--form-rounding);
}
#information p {
  opacity: 0;
  text-align: center;
  align-content: center;
  transition: opacity 0.5s ease-out;
  background-color: var(--accent-1);
  color: white;
  padding: 2px;
  border-radius: var(--form-rounding);
}
.invalid-entry {
  background-color: rgba(255, 0, 0, 0.3);
}

